--- a/.buildkite/scaling/pipeline.yml
+++ b/.buildkite/scaling/pipeline.yml
@@ -34,7 +34,7 @@ steps:
   - group: "ClimaAtmos scaling tests"
     steps:
 
-    - label: ":computer: MPI Held-Suarez scaling test(ρe) - (2) processes"
+    - label: ":computer: MPI Held-Suarez scaling test(ρe_tot) - (2) processes"
       command: "mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_held_suarez_rhoe --forcing held_suarez --enable_threading false --upwinding none --t_end 1hours --dt 100secs --z_elem 40 --h_elem 16 --kappa_4 1e15" 
       artifact_paths: "sphere_held_suarez_rhoe/*"
       env:
@@ -46,7 +46,7 @@ steps:
         slurm_tasks_per_node: 2
         slurm_mem: 64GB
 
-    - label: ":computer: MPI Held-Suarez scaling test(ρe) - (4) processes"
+    - label: ":computer: MPI Held-Suarez scaling test(ρe_tot) - (4) processes"
       command: "mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_held_suarez_rhoe --forcing held_suarez --enable_threading false --upwinding none --t_end 1hours --dt 100secs --z_elem 40 --h_elem 16 --kappa_4 1e15" 
       artifact_paths: "sphere_held_suarez_rhoe/*"
       env:
@@ -58,7 +58,7 @@ steps:
         slurm_tasks_per_node: 4
         slurm_mem: 64GB
 
-    - label: ":computer: MPI Held-Suarez scaling test(ρe) - (8) processes"
+    - label: ":computer: MPI Held-Suarez scaling test(ρe_tot) - (8) processes"
       command: "mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_held_suarez_rhoe --forcing held_suarez --enable_threading false --upwinding none --t_end 1hours --dt 100secs --z_elem 40 --h_elem 16 --kappa_4 1e15" 
       artifact_paths: "sphere_held_suarez_rhoe/*"
       env:
@@ -70,7 +70,7 @@ steps:
         slurm_tasks_per_node: 8
         slurm_mem: 64GB
 
-    - label: ":computer: MPI Held-Suarez scaling test(ρe) - (16) processes"
+    - label: ":computer: MPI Held-Suarez scaling test(ρe_tot) - (16) processes"
       command: "mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_held_suarez_rhoe --forcing held_suarez --enable_threading false --upwinding none --t_end 1hours --dt 100secs --z_elem 40 --h_elem 16 --kappa_4 1e15" 
       artifact_paths: "sphere_held_suarez_rhoe/*"
       env:
@@ -82,7 +82,7 @@ steps:
         slurm_tasks_per_node: 16
         slurm_mem: 128GB
 
-    - label: ":computer: MPI Held-Suarez scaling test(ρe) - (32) processes"
+    - label: ":computer: MPI Held-Suarez scaling test(ρe_tot) - (32) processes"
       command: "mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_held_suarez_rhoe --forcing held_suarez --enable_threading false --upwinding none --t_end 1hours --dt 100secs --z_elem 40 --h_elem 16 --kappa_4 1e15" 
       artifact_paths: "sphere_held_suarez_rhoe/*"
       env:
@@ -95,7 +95,7 @@ steps:
         slurm_mem: 256GB
 
 
-    - label: ":computer: MPI Held-Suarez scaling test(ρe) - (64) processes"
+    - label: ":computer: MPI Held-Suarez scaling test(ρe_tot) - (64) processes"
       command: "mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_held_suarez_rhoe --forcing held_suarez --enable_threading false --upwinding none --t_end 1hours --dt 100secs --z_elem 40 --h_elem 16 --kappa_4 1e15" 
       artifact_paths: "sphere_held_suarez_rhoe/*"
       env:
