--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -65,9 +65,9 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 ArgParse = "1.1"
 ArtifactWrappers = "0.1"
 AtmosphericProfilesLibrary = "0.1"
-CLIMAParameters = "0.4"
+CLIMAParameters = "0.4, 0.5, 0.6"
 ClimaCore = "0.10"
-CloudMicrophysics = "0.4"
+CloudMicrophysics = "0.5"
 Dierckx = "0.5"
 Distributions = "0.25"
 DocStringExtensions = "0.8"
@@ -90,8 +90,8 @@ StatsBase = "0.33"
 StochasticDiffEq = "6.42"
 SurfaceFluxes = "0.3"
 TerminalLoggers = "0.1"
-Thermodynamics = "0.7"
-TurbulenceConvection = "0.25"
+Thermodynamics = "0.8"
+TurbulenceConvection = "0.29"
 UnPack = "1"
 julia = "1.5"
 
