--- a/Project.toml
+++ b/Project.toml
@@ -21,17 +21,17 @@ Thermodynamics = "b60c26fb-14c3-4610-9d3e-2d17fe7ff00c"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
-CLIMAParameters = "0.4"
+CLIMAParameters = "0.4, 0.5, 0.6"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
-CloudMicrophysics = "0.4"
+CloudMicrophysics = "0.5"
 DiffEqCallbacks = "2.22"
 IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
 OrdinaryDiffEq = "5.64.0"
 StaticArrays = "1.4"
-Thermodynamics = "0.7"
+Thermodynamics = "0.8"
 UnPack = "1"
 
 [extras]
