--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -64,13 +64,13 @@ ArgParse = "1.1"
 ArtifactWrappers = "0.1"
 AtmosphericProfilesLibrary = "0.1"
 BlockArrays = "0.16"
-CLIMAParameters = "0.4"
+CLIMAParameters = "0.4, 0.5, 0.6"
 ClimaComms = "0.3"
 ClimaCommsMPI = "0.3"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
-CloudMicrophysics = "0.4"
+CloudMicrophysics = "0.5"
 Dierckx = "0.5"
 DiffEqBase = "~6.84.0"
 DiffEqCallbacks = "2.22"
@@ -106,8 +106,8 @@ StatsBase = "0.33"
 StochasticDiffEq = "6.42"
 SurfaceFluxes = "0.3"
 TerminalLoggers = "0.1"
-Thermodynamics = "0.7"
-TurbulenceConvection = "0.25"
+Thermodynamics = "0.8"
+TurbulenceConvection = "0.29"
 UnPack = "1"
 julia = "1.5"
 
