--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -37,31 +37,31 @@ steps:
       # TODO: Add all milestone long simulation runs
 
       - label: ":computer: held suarez (ρe_tot)"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --t_end 1200days --fps 30 --job_id longrun_hs_rhoe --dt_save_to_sol 6hours"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --t_end 1200days --fps 30 --job_id longrun_hs_rhoe --dt_save_to_sol 6hours --dt_save_to_disk 10days"
         artifact_paths: "longrun_hs_rhoe/*"
         agents:
           slurm_cpus_per_task: 8
 
       - label: ":computer: held suarez (ρe_tot) third order"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --upwinding third_order --dt 300secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_third --dt_save_to_sol 6hours"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --upwinding third_order --dt 300secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_third --dt_save_to_sol 6hours --dt_save_to_disk 10days"
         artifact_paths: "longrun_hs_rhoe_third/*"
         agents:
           slurm_cpus_per_task: 8
 
       - label: ":computer: held suarez (ρe_tot) equilmoist"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --microphy 0M --dt 200secs --t_end 600days --fps 30 --job_id longrun_hs_rhoe_equil --dt_save_to_sol 6hours"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --microphy 0M --dt 200secs --t_end 600days --fps 30 --job_id longrun_hs_rhoe_equil --dt_save_to_sol 6hours --dt_save_to_disk 10days"
         artifact_paths: "longrun_hs_rhoe_equil/*"
         agents:
           slurm_cpus_per_task: 8
 
       - label: ":computer: aquaplanet (ρe_tot) equilmoist gray radiation"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --moist equil --rad gray --microphy 0M --dt 200secs --t_end 600days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_gray --dt_save_to_sol 6hours"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --moist equil --rad gray --microphy 0M --dt 200secs --t_end 600days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_gray --dt_save_to_sol 6hours --dt_save_to_disk 10days"
         artifact_paths: "longrun_aquaplanet_rhoe_equil/*"
         agents:
           slurm_cpus_per_task: 8
 
       - label: ":computer: held suarez (ρe_int)"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --energy_name rhoe_int --t_end 1200days --fps 30 --job_id longrun_hs_rhoeint --dt_save_to_sol 6hours"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --energy_name rhoe_int --t_end 1200days --fps 30 --job_id longrun_hs_rhoeint --dt_save_to_sol 6hours --dt_save_to_disk 10days"
         artifact_paths: "longrun_hs_rhoeint/*"
         agents:
           slurm_cpus_per_task: 8
@@ -71,19 +71,19 @@ steps:
     steps:
 
       - label: ":computer: held suarez (ρe_tot) hightop"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --z_max 45e3 --z_elem 25 --dt 300secs --t_end 600days --fps 30 --job_id longrun_hs_rhoe_hightop --dt_save_to_sol 6hours"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --z_max 45e3 --z_elem 25 --dt 300secs --t_end 600days --fps 30 --job_id longrun_hs_rhoe_hightop --dt_save_to_sol 6hours --dt_save_to_disk 10days"
         artifact_paths: "longrun_hs_rhoe_hightop/*"
         agents:
           slurm_cpus_per_task: 8
 
       - label: ":computer: held suarez (ρe_tot) equilmoist hightop rayleigh"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --z_max 45e3 --z_elem 25 --vert_diff true --microphy 0M --rayleigh_sponge true --zd_rayleigh 30e3 --dt 200secs --t_end 400days --upwinding none --fps 30 --job_id longrun_hs_rhoe_equil_hightop_rayleigh --dt_save_to_sol 6hours"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --z_max 45e3 --z_elem 25 --vert_diff true --microphy 0M --rayleigh_sponge true --zd_rayleigh 30e3 --dt 200secs --t_end 400days --upwinding none --fps 30 --job_id longrun_hs_rhoe_equil_hightop_rayleigh --dt_save_to_sol 6hours --dt_save_to_disk 10days"
         artifact_paths: "longrun_hs_rhoe_equil_hightop_rayleigh/*"
         agents:
           slurm_cpus_per_task: 8
 
       - label: ":computer: held suarez (ρe_tot) equilmoist hightop viscous"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --z_max 45e3 --z_elem 25 --vert_diff true --microphy 0M --viscous_sponge true --zd_viscous 30e3 --dt 200secs --t_end 400days --upwinding none --fps 30 --job_id longrun_hs_rhoe_equil_hightop_viscous --dt_save_to_sol 6hours"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --z_max 45e3 --z_elem 25 --vert_diff true --microphy 0M --viscous_sponge true --zd_viscous 30e3 --dt 200secs --t_end 400days --upwinding none --fps 30 --job_id longrun_hs_rhoe_equil_hightop_viscous --dt_save_to_sol 6hours --dt_save_to_disk 10days"
         artifact_paths: "longrun_hs_rhoe_equil_hightop_viscous/*"
         agents:
           slurm_cpus_per_task: 8
