--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
 OrdinaryDiffEq = "5.64.0"
 StaticArrays = "1.4"
-Thermodynamics = "0.7"
+Thermodynamics = "0.7, 0.8"
 UnPack = "1"
 
 [extras]
