--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -184,6 +184,10 @@ steps:
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --moist equil --rad gray --microphy 0M --job_id sphere_aquaplanet_rhoe_equilmoist_gray --dt 200secs --t_end 5days"
         artifact_paths: "sphere_aquaplanet_rhoe_equilmoist_gray/*"
 
+      - label: ":computer: aquaplanet (ρe_tot) equilmoist clearsky radiation"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --moist equil --rad clearsky --microphy 0M --job_id sphere_aquaplanet_rhoe_equilmoist_clearsky --dt 200secs --t_end 5days"
+        artifact_paths: "sphere_aquaplanet_rhoe_equilmoist_clearsky/*"
+
       - label: ":computer: Single column EDMF on single column"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --energy_name rhotheta --moist equil --turbconv edmf --split_ode false --ode_algo Euler --dt_save_to_sol 5mins --z_elem 60 --z_stretch false --z_max 3e3 --job_id edmf_single_column --dt 6secs --t_end 6hours --regression_test true"
         artifact_paths: "edmf_single_column/*"
