--- a/Project.toml
+++ b/Project.toml
@@ -44,7 +44,7 @@ DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4"
 Flux = "0.12, 0.13"
 Insolation = "0.3"
-IntervalSets = "0.5, 0.6"
+IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
 LambertW = "0.4"
 OperatorFlux = "0.1"
