--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -32,6 +32,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NCRegressionTests = "1789bc09-29e6-4c93-9c75-fe2179693664"
+NVTX = "5da4648a-3479-48b8-97b9-01cb529c0a1f"
 OperatorFlux = "47cfafe2-3833-4da3-8183-ce14c2b92cbd"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
